return actual last log entry, including from sublogentryparcels